fix: Carousell was off on mobile

--- a/src/styles/objects.less
+++ b/src/styles/objects.less
@@ -225,14 +225,14 @@
         display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: 24.5rem;
-        transform: translateY(var(--offset));
+        transform: translateY(calc(var(--offset) * -26.5rem));
         transition: transform 1s ease-in-out;
         gap: 2rem;
 
         @media only screen and (max-width: (@screen-content + @spacing-4)) {
             grid-template-columns: 100% 100% 100%;
             grid-template-rows: 1fr;
-            transform: translateX(var(--offset));
+            transform: translateX(calc(var(--offset) * (-100% - 2rem)));
         }
     }
 }
